--- a/lesson-03-spring-mvc/src/main/webapp/WEB-INF/views/new_product_form.html
+++ b/lesson-03-spring-mvc/src/main/webapp/WEB-INF/views/new_product_form.html
@@ -41,6 +41,10 @@
                     <input th:field="*{id}" type="text" class="form-control" id="id" name="id" placeholder="Enter product id">
                     <label>Name</label>
                     <input th:field="*{name}" type="text" class="form-control" id="name" name="productname" placeholder="Enter product name">
+                    <label>Price</label>
+                    <input th:field="*{price}" type="text" class="form-control" id="price" name="productprice" placeholder="Enter product price">
+                    <label>Description</label>
+                    <input th:field="*{description}" type="text" class="form-control" id="description" name="productdescription" placeholder="Enter product description">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
