--- a/lesson-03-spring-mvc/src/main/webapp/WEB-INF/views/product_form.html
+++ b/lesson-03-spring-mvc/src/main/webapp/WEB-INF/views/product_form.html
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">List</a>
+                <a class="nav-link" th:href="@{/product/}">List</a>
             </li>
         </ul>
     </div>
