--- a/lesson-8-thymeleaf/src/main/resources/templates/product.html
+++ b/lesson-8-thymeleaf/src/main/resources/templates/product.html
@@ -85,8 +85,8 @@
         <div class="col-12">
             <nav aria-label="...">
                 <ul class="pagination">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1">Previous</a>
+                    <li th:classappend="${products.number == 0} ? 'disabled':'active'" class="page-item">
+                        <a class="page-link" th:href="@{/product(nameFilter=${param.nameFilter}, page=${products.number}, size=${param.size}, sort=${param.sort})}">Previous</a>
                     </li>
 
                     <li th:each="num : ${#numbers.sequence(1, products.totalPages)}"
@@ -96,8 +96,8 @@
                            th:text="${num}">1</a>
                     </li>
 
-                    <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
+                    <li th:classappend="${products.number == products.numberOfElements} ? 'disabled':'active'" class="page-item">
+                        <a class="page-link" th:href="@{/product(nameFilter=${param.nameFilter}, page=${products.number + 2}, size=${param.size}, sort=${param.sort})}">Next</a>
                     </li>
                 </ul>
             </nav>
