--- a/lesson-8-thymeleaf/src/main/resources/templates/product.html
+++ b/lesson-8-thymeleaf/src/main/resources/templates/product.html
@@ -96,7 +96,7 @@
                            th:text="${num}">1</a>
                     </li>
 
-                    <li th:classappend="${products.number == products.numberOfElements} ? 'disabled':'active'" class="page-item">
+                    <li th:classappend="${products.number+1 == products.totalPages} ? 'disabled':'active'" class="page-item">
                         <a class="page-link" th:href="@{/product(nameFilter=${param.nameFilter}, page=${products.number + 2}, size=${param.size}, sort=${param.sort})}">Next</a>
                     </li>
                 </ul>
